expected/main/core/structs/structs-init-default14.err
ERROR: "actual/main/core/structs/structs-init-default14.lc", line 9
area s <- initStored0 :: Ref S
          ^
"initStored0" is not in scope

ERROR: Aborting after previously reported error

